kube/deploy/core/storage/minio-nas/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app minio-nas
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # allow HTTPS traffic in-cluster
    - fromEndpoints:
        - matchLabels:
            s3.home.arpa/minio-nas: allow
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "9000"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: &app minio-nas-in-cluster
spec:
  endpointSelector:
    matchLabels:
      s3.home.arpa/minio-nas: allow
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: minio-nas
            app.kubernetes.io/name: minio-nas
      toPorts:
        - ports:
            - port: "9000"
